syntax = "proto3";

option java_package = "io.morfly.users";
package users;

import "google/protobuf/empty.proto";

service UsersService {
  rpc ListUsers (google.protobuf.Empty) returns (UserList);

  rpc GetUser (GetUserRequest) returns (UserResponse);

  rpc CreateUser (NewUserRequest) returns (UserResponse);

  rpc DeleteUser (DeleteUserRequest) returns (UserDeletedResponse);
}

message User {
  string id = 1;
  string user_name = 2;
  string display_name = 3;
  optional string avatar_url = 4;
}

message UserResponse {
  optional User user = 1;
}

message UserList {
  repeated User users = 1;
}

message GetUserRequest {
  string user_id = 1;
}

message NewUserRequest {
  string user_name = 1;
  string display_name = 2;
  optional string avatar_url = 3;
}

message DeleteUserRequest {
  string user_id = 1;
}

message UserDeletedResponse {
  bool deleted = 1;
}